feat: refactor CameraController to use CameraService and add CameraVO for response